# hfind

./: .gitignore  Correcto.hs  CorrectoPrueba.hs  LICENSE  Main.hs  Parser.hs  Readme.md  hfind  hfind.cabal  hfind.hs  hfind2.hs  test.hs
