name:                hfind
version:             0.1.0.0
synopsis:            A GNU-find based tool written in Haskell
-- description:         
license:             BSD3
license-file:        LICENSE
author:              julianmacagno
maintainer:          julian.macagno55@gmail.com
-- copyright:           
category:            System
build-type:          Simple
extra-source-files:  Readme.md
cabal-version:       >=1.10

executable hfind
  main-is:           Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:     base                 >= 4.9,
                     optparse-applicative >= 0.14.3.0,
                     filemanip            >= 0.3.6.3, 
                     process              >= 1.6.5.0,
                     strings              >= 1.1
  -- hs-source-dirs:      
  default-language:  Haskell2010
